tests/baselines/reference/parserArrowFunctionExpression15.errors.txt
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression15.ts(1,10): error TS2304: Cannot find name 'param'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression15.ts(1,28): error TS2304: Cannot find name 'param'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression15.ts(1,34): error TS1005: ';' expected.


==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression15.ts (3 errors) ====
    false ? (param): string => param : null
             ~~~~~
!!! error TS2304: Cannot find name 'param'.
                               ~~~~~
!!! error TS2304: Cannot find name 'param'.
                                     ~
!!! error TS1005: ';' expected.
    